# mira

./: .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  README.md  kafka.md  pyproject.toml  run_pipeline.py
.github/workflows/: KPIs.md  build-deploy.yml
CompanyDocuments/: api_server.py  inventory_monthly_category.csv  invoices.csv  parse_pdfs.py  rag_shipping_advisor.py  shipping_orders.csv  start_chatbot.sh  test_rag_queries.py
CompanyDocuments/chatbot-frontend/: package-lock.json
CompanyDocuments/chatbot-frontend/src/: App.jsx  ChatBot.css
CompanyDocuments/product_catalog_quoting/: app.py  requirements.txt
CompanyDocuments/product_catalog_quoting/static/: index.html
backend/: KPIs.md  aggregator.py  api_catalog.py  api_rag.py  api_upload.py  chroma_upsert.py  config.py  deployments.py  kafka_consumer.py  kafka_producer.py  metrics.py  orchestrator.py  pipeline.py  session_store.py  telemetry.py  vector_store.py  watcher.py
backend/agents/: KPIs.md  agent_customer_service.py  agent_images.py  agent_pricing.py  agent_products.py  agent_quote.py  agent_shipping.py  agent_supervisor.py  graph.py  ingestion_agent.py  integration_agent.py  quality_agent.py  schema_config.py  transformation_agent.py
backend/agents/tools/: chroma_utils.py  customer_service_tools.py  image_tools.py  pricing_tools.py  product_tools.py  quote_tools.py  shipping_tools.py
backend/db/: KPIs.md  migrations.py  models.py  repository.py
data/csv/: PurchaseOrders.csv  inventory_monthly.csv
docs/: KPIs.md  devops.md  secrets.md
frontend/: KPIs.md  nginx.conf
frontend/chatbot/: index.html
frontend/chatbot/src/: ChatBot.jsx  index.css
k8s/: KPIs.md  README.md  backend.yaml  chromadb.yaml  ci-cd-spec.md  frontend.yaml  hpa.yaml  ingress.yaml  kafka-aggregator.yaml  kafka-consumer.yaml  kustomization.yaml  minio.yaml  pipeline.yaml  postgresql.yaml  prefect.yaml  secrets.yaml.template  terraform-infrastructure.md
k8s/observability/: KPIs.md  alertmanager.yaml  fluentd.yaml  grafana-dashboards.yaml  grafana.yaml  kustomization.yaml  loki.yaml  prometheus-rules.yaml  prometheus.yaml
k8s/vault/: KPIs.md  bootstrap-job.yaml  config.yaml  external-secrets.yaml  secretstore.yaml  vault.yaml
scripts/: KPIs.md  com.ecommerce.ingest-watcher.plist  install-watcher.sh  run.sh
specs/: KPIs.md  agentic-chat.md  kafka-ingestion.md  observability.md  prefect-upgrade.md  testing-strategy.md
tests/: KPIs.md  conftest.py  rag_smoke_manual.py  test_aggregator.py  test_api_catalog.py  test_api_rag.py  test_api_upload.py  test_chroma_upsert.py  test_db_migrations.py  test_db_repository.py  test_ingestion_agent.py  test_integration_agent.py  test_kafka_consumer.py  test_kafka_producer.py  test_quality_agent.py  test_rag.py  test_rag_smoke.py  test_transformation_agent.py
