[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ecommerce-data-pipeline"
version = "1.0.0"
description = "Ecommerce data pipeline with RAG shipping advisor and product catalog quoting system"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "pandas>=2.0.0",
    "prefect>=3.0",
    "PyMuPDF>=1.24.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.30.0",
]
