[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ecommerce-data-pipeline"
version = "1.0.0"
description = "Ecommerce data pipeline with RAG shipping advisor and product catalog quoting system"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "kafka-python>=2.0.2",
    "pandas>=2.0.0",
    "prefect>=3.0",
    "asyncpg>=0.29",
    "prometheus-client>=0.20",
    "psycopg2-binary>=2.9.0",
    "PyMuPDF>=1.24.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.0",
    "structlog>=24.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/agents/schema_config.py",
    "backend/db/migrations.py",
    "tests/*",
    "**/__pycache__/*",
    "**/test_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
